# xColorPicker

./: AppConfig.cpp  CMakeLists.txt  ColorIndicator.cpp  ColorIndicatorLabel.cpp  ColorIndicatorLabel.h  ColorPickerWidget.cpp  ColorPickerWidget.h  CommonHelper.cpp  CommonHelper.h  MainDialog.cpp  MainDialog.h  MainDialog.ui  README.md  StackConfigFrame.cpp  StackPickerFrame.cpp  StackPickerFrame.h  SystemTrayIcon.cpp  SystemTrayIcon.h  TrayMenu.cpp  TrayMenu.h  XColorPicker.pro  english.ts  main.cpp  simplified_chinese.ts
data/: xcolorpicker.desktop
debian/: changelog  control  files  xcolorpicker.install  xcolorpicker.substvars
debian/.debhelper/xcolorpicker/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/xcolorpicker/dbgsym-root/usr/share/doc/: xcolorpicker-dbgsym
debian/xcolorpicker/DEBIAN/: control  md5sums
debian/xcolorpicker/usr/share/doc/xcolorpicker/: copyright
resource/: Res.qrc  english.qm  qss_default.qss  simplified_chinese.qm
src/: AppConfig.cpp  CMakeLists.txt  ColorIndicator.h  ColorLabel.cpp  ColorLabel.h  ColorPickerWidget.cpp  ColorSlider.h  LICENSE  StackConfigFrame.cpp  simplified_chinese.ts
src/common/: AppConfig.cpp  AppConfig.h  version.h  version.h.in
src/dialogs/: ColorSlider.cpp  MainDialog.cpp  StackConfigFrame.h  StackPickerFrame.cpp  TrayMenu.h
src/resource/: Res.qrc  englisht.ts  res.qrc  simplified_chinese.ts
